# pret_a_depenser

./: .dockerignore  .env_example  Dockerfile  README.md  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml
app/: config.py  crud.py  db.py  main.py  model_loader.py  models.py  schemas.py  security.py
dashboard/: dashboard_config.py  dashboard_main.py  dashboard_monitoring.py  dashboard_predictions.py  dashboard_request.py  dashboard_systeme.py
docs/: api.md  index.md  rapport_optimisation_inference.md  travaux.md
livrables2/: GONZALEZ_Stephane_6_CHANGELOG_23042025.md  GONZALEZ_Stephane_7_Rapport_Performance_23042025.pptx  GONZALEZ_Stephane_8_Chemin_repertoire_github_23042025.txt
logs/: app.jsonl
notebook/: dataset.csv  pret_a_depenser.ipynb
scripts/: Pipeline_db.py  benchmark_inference.py  clean_features_table.py  convert_model_to_onnx.py  create_clean_features_table.py  create_enriched_features_table.py  create_features_table.py  create_model_ready_table.py  create_monitoring_tables.py  create_prediction_tables.py  create_raw_tables.py  create_temp_feature_tables.py  enrich_features_table.py  load_csv_to_postgres.py  populate_enriched_features_table.py  populate_model_ready_table.py  populate_temp_feature_tables.py  profile_inference.py  register_model.py  reset_data_keep_model_registry.py  run_evidently_monitoring.py  verify_model_features.py
tests/: conftest.py  test_crud_monitoring.py  test_data_loading_service.py  test_evidently_service.py  test_features_builder_service.py  test_history_service.py  test_main.py  test_model_loading_service.py  test_monitoring_evaluation_service.py  test_monitoring_service.py  test_prediction.py  test_prediction_logging_service.py  test_prediction_service.py  test_route_history.py  test_route_monitoring.py  test_route_prediction.py  test_security.py  (+1 more)
(+53 files in other folders)
