[project]
name = "pret-a-depenser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.4",
    "catboost>=1.2.10",
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.4",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "mlflow>=3.9.0",
    "numpy>=2.4.2",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.50.0",
    "skops>=0.13.0",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.56.0",
    "xgboost>=3.2.0",
]
