[project]
name = "pret-a-depenser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.4",
    "catboost>=1.2.10",
    "evidently>=0.7.21",
    "huggingface-hub>=1.12.0",
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.4",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.4",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "mlflow>=3.9.0",
    "numpy>=2.4.2",
    "onnx>=1.21.0",
    "onnxmltools>=1.16.0",
    "onnxruntime>=1.25.0",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.3.3",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.50.0",
    "skl2onnx>=1.20.0",
    "skops>=0.13.0",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.56.0",
    "xgboost>=3.2.0",
]
